--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
 # nos resources definidos(deployment.yaml, service.yaml)
 
 # Exemplo de o deployment.yaml e service.yaml rode em um determinado namespace
-namespace: gooapp
+namespace: goapp
 
 # imagens que vamos utilizar
 images:
