--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -2,6 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+# recursos que irão ser alterados
 resources:
 - deployment.yaml
 - service.yaml
