--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -1,31 +1,15 @@
 # Kustomize recurso do kubernetes que ajuda a customizar os manifestos em tempo real
-<<<<<<< HEAD
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-
-# recursos que irão ser alterados
-resources:
-- deployment.yaml
-- service.yaml
-
-=======
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
->>>>>>> 33f70ed0bcbe68556013462ac0b2a9def72e1d5c
 # tudo que for configurado serão aplicados
 # nos resources definidos(deployment.yaml, service.yaml)
 resources:
 - deployment.yaml
 - service.yaml
 # Exemplo de o deployment.yaml e service.yaml rode em um determinado namespace
-<<<<<<< HEAD
 namespace: goapp
-
-=======
-namespace: gooapp
->>>>>>> 33f70ed0bcbe68556013462ac0b2a9def72e1d5c
 # imagens que vamos utilizar
 images:
 - name: goapp
-  newName: barafaskt/argocd
-  newTag: 55b70a349d2363564d45ac547d9859f077c3fcb7
+  newName: goapp
+  newTag: latest
